Persist session stats instead of dropping them after mapping